feat: add Colima support and enhance OrbStack sandbox
- Add Colima as Docker runtime alternative in Brewfile
- Move OrbStack to optional setup (license consideration)
- Enhance OrbStack sandbox with VS Code and Claude Code
- Update setup instructions with symlink approach for global Brewfile
- Add Colima startup options with performance optimizations

--- a/orbstack/sandbox.yaml
+++ b/orbstack/sandbox.yaml
@@ -5,6 +5,20 @@
 packages:
   - git
   - python3.11
+  - curl
+  - wget
+  - gpg
 
 package_update: true
 package_upgrade: true
+
+runcmd:
+  # Install VS Code
+  - wget -qO- https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > /tmp/packages.microsoft.gpg
+  - install -D -o root -g root -m 644 /tmp/packages.microsoft.gpg /etc/apt/keyrings/packages.microsoft.gpg
+  - sh -c 'echo "deb [arch=amd64,arm64,armhf signed-by=/etc/apt/keyrings/packages.microsoft.gpg] https://packages.microsoft.com/repos/code stable main" > /etc/apt/sources.list.d/vscode.list'
+  - apt-get update
+  - apt-get install -y code
+
+  # Install Claude Code extension
+  - code --install-extension anthropic.claude-code --force
